--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'config';
 @import 'utilities';
+@import 'form';
 
 * {
     box-sizing: border-box;
@@ -73,5 +74,16 @@ img {
         justify-content: center;
         text-align: center; 
     }
+}
+
+// Profiles Page
+.profile {
+    display: grid;
+    grid-template-columns: 2fr 4fr 2fr;
+    grid-gap: 2rem;
+    align-items: center;
+    padding: 1rem;
+    line-height: 1.8;
+    margin-bottom: 1rem;
 }
 
